# USB_MultiDevice

./: .gitignore  .mxproject  CMakeLists.txt  README.md  STM32H743XG_FLASH.ld  USB_MultiDevice.ioc  compile_commands.json
Composite/: AL94.I-CUBE-USBD-COMPOSITE_conf.h
Core/Inc/: main.h  stm32h7xx_hal_conf.h  usart.h
Core/Src/: gpio.c  main.c  usart.c  usb_otg.c
USB_DEVICE/App/: usb_device.c  usbd_cdc_if.c  usbd_composite_builder.h
cmake/stm32cubemx/: CMakeLists.txt
